# c_template_meson

./: .clang-format  README.md  meson.build
.github/workflows/: ci.yml
_site/: index.html
docs/: Doxyfile.in
include/lib/: lib.h
scripts/: run.sh
src/: lib.c  main.c
test/: test_lib.c
